--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,13 @@
     "ecmaVersion": 2020,
     "sourceType": "script"
   },
+  "ignorePatterns": [
+    "js/click-scroll-vanilla.js",
+    "js/image-optimizer.js", 
+    "js/memory-optimized-bundle.js",
+    "js/performance-monitor.js",
+    "js/optimized-bundle.js"
+  ],
   "rules": {
     "indent": ["error", 2],
     "quotes": ["error", "single"],
